@@ -8,6 +8,7 @@
            writes out the error messages of the archiver
            archive type autodetection by its header (first 512 byte)
 
+    FIXED: last tabs are not saved, if an old config value is present
     FIXED: panel popup gets focus at opening, gives focus to panel at hiding
     FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'
            
